[gd_scene load_steps=17 format=2]

[ext_resource path="res://common/Shake.tscn" type="PackedScene" id=1]
[ext_resource path="res://characters/stats/stats_manager.tscn" type="PackedScene" id=2]
[ext_resource path="res://characters/textures/vfx/hoe-fx.png" type="Texture" id=4]
[ext_resource path="res://map/scenes/resources/empty_plot.gd" type="Script" id=5]
[ext_resource path="res://map/textures/objects/plant/plant.png" type="Texture" id=6]
[ext_resource path="res://fonts/m5x7.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://ui/textures/buttons/btn_no.png" type="Texture" id=8]
[ext_resource path="res://areas/detect_right_click_area.gd" type="Script" id=9]
[ext_resource path="res://map/scenes/resources/EmptyPlotController.tscn" type="PackedScene" id=10]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "hit"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.001

[sub_resource type="Animation" id=4]
resource_name = "die"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.8 ), Color( 1, 1, 1, 0.6 ), Color( 1, 1, 1, 0.4 ), Color( 1, 1, 1, 0.2 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="DynamicFont" id=5]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 7 )

[sub_resource type="Animation" id=6]
length = 0.001

[sub_resource type="Animation" id=7]
resource_name = "button_fade"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.498039 ), Color( 1, 1, 1, 1 ) ]
}

[node name="EmptyPlot" type="Node2D"]
script = ExtResource( 5 )
lvl = null

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 6 )

[node name="Shake" parent="Sprite" instance=ExtResource( 1 )]

[node name="Area2D" type="Area2D" parent="Sprite"]
script = ExtResource( 9 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Sprite/Area2D"]
polygon = PoolVector2Array( -18, 2, -3, 10, 3, 10, 17, 3, 17, -4, 2, -11, -5, -11, -18, -4 )

[node name="VFX_Hit" type="Sprite" parent="."]
visible = false
position = Vector2( 1, -14 )
texture = ExtResource( 4 )
hframes = 6
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="VFX_Hit"]
anims/RESET = SubResource( 1 )
anims/hit = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 3 )
anims/die = SubResource( 4 )

[node name="StatsManager" parent="." instance=ExtResource( 2 )]

[node name="GroupButtonRemove" type="Node2D" parent="."]
position = Vector2( 0, -15 )
z_index = 10

[node name="ButtonRemove" type="TextureButton" parent="GroupButtonRemove"]
visible = false
margin_left = -28.0
margin_top = -46.0
margin_right = 36.0
margin_bottom = -14.0
rect_scale = Vector2( 0.85, 0.85 )
texture_normal = ExtResource( 8 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="GroupButtonRemove/ButtonRemove"]
margin_right = 64.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 5 )
text = "Remove"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="GroupButtonRemove/ButtonRemove"]
autoplay = "button_fade"
anims/RESET = SubResource( 6 )
anims/button_fade = SubResource( 7 )

[node name="EmptyPlotController" parent="." instance=ExtResource( 10 )]

[node name="Tween" type="Tween" parent="."]
